--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #0d253f;
+  color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.center-max-size {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  padding: 15px;
+  text-transform: capitalize;
+}
+
+.poster {
+  background-size: cover;
+  background-position: top center;
+  min-height: 600px;
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 50px;
+  position: relative;
+}
+
+.poster-content {
+  width: 80%;
+}
+
+h1 {
+  font-size: 92px;
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 50px;
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 10px;
+  clear: both;
+  text-align: center;
+  color: #90cea1;
+}
+
+h2 span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+h3 {
+  font-size: 20px;
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 10px;
+  clear: both;
+  color: #01b4e4;
+  outline: black;
+}
+
+.container {
+  background-color: black;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+
+.button {
+  margin: 20px 0;
+  background: #0F1014;
   color: white;
+  border: none;
+  outline: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border: 1px solid gray;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover {
+  box-shadow: 0 5px 5px rgba(0,0,0,0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close-video {
+  position: absolute;
+  z-index: 2;
+  bottom: 10px;
+  left: 10px;
+}
+
+.youtube-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.brand {
+  font-weight: bold;
+}
+
+/*-- MOVIE */
+
+.movie {
+  position: relative;
+  cursor: pointer;
+  text-align: left;
+  font-size: 16px;
+}
+
+.movie img {
+  height: 355px;
+  max-width: 100%;
+}
+
+.movie-infos {
+  padding: 15px 0;
+}
+
+.movie-title {
+  margin: 0;
+}
+
+.movie-voting {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background-color: #0F1014;
+  border: 1px solid gray;
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 25px;
+}
+
+/** SEARCH **/
+.form {
+  position: relative;
+}
+
+.search {
+  border: 1px solid darkslategray;
+  outline: solid;
+  background-color: solid;
+  padding: 5px 10px;
+  border-radius: 10px;
+  color: black;
+
+}
+
+.submit-search {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background-color: transparent;
+  color:  white;
+  border: none;
+  cursor: pointer;
 }
